# youtune

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_parser.py  test_utils.py
youtune/: __init__.py  cli.py  config.py  downloader.py  parser.py  soulseek.py  tagger.py  utils.py  writer.py
